Update to OpenJDK 11, issue #114
Follow the TSTool update notes, which covered most of the steps.
Then clean up code based on compiler messages.