@@ -312,7 +312,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
     }
     
     CommandStatus status = getCommandStatus();
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.valueOf(true); // default
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
