@@ -143,7 +143,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 
 	PropList parameters = getCommandParameters();
 	CommandProcessor processor = getCommandProcessor();
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.valueOf(true); // default
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
