@@ -325,7 +325,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
     
     CommandStatus status = getCommandStatus();
 	CommandProcessor processor = getCommandProcessor();
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.valueOf(true); // default
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
@@ -717,7 +717,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
             }
             PropList request_params = new PropList ( "" );
             request_params.setUsingObject ( "PropertyName", rowCountProperty );
-            request_params.setUsingObject ( "PropertyValue", new Integer(rowCount) );
+            request_params.setUsingObject ( "PropertyValue", Integer.valueOf(rowCount) );
             try {
                 processor.processRequest( "SetProperty", request_params);
             }
